PSoC/ccNOos_lib.cylib/BUILD.log
--------------- Build Started: 11/01/2021 18:01:44 Project: ccNOos_lib, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The compile step is up to date, no work needs to be done.
The library generation step is up to date, no work needs to be done.
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/compute_module.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c ..\..\ccNOos\computeModule\compute_module.c -o .\CortexM3\ARM_GCC_541\Debug\compute_module.o
In file included from ..\..\ccNOos\computeModule\compute_module.c:32:0:
..\..\ccNOos\computeModule\compute_module.h:39:5: error: unknown type name 'uint32_t'
     uint32_t exceptionFlags;    
     ^
In file included from ..\..\ccNOos\computeModule\compute_module.c:33:0:
..\..\ccNOos\computeModule\../executionSystem/execution_system.h:61:5: error: unknown type name 'uint32_t'
     uint32_t uSecTicks;
     ^
..\..\ccNOos\computeModule\../executionSystem/execution_system.h:62:5: error: unknown type name 'uint32_t'
     uint32_t hourTicks;
     ^
..\..\ccNOos\computeModule\../executionSystem/execution_system.h:63:5: error: unknown type name 'uint32_t'
     uint32_t uSecPerSysTick;
     ^
..\..\ccNOos\computeModule\../executionSystem/execution_system.h:68:5: error: unknown type name 'uint32_t'
     uint32_t uSperTick
     ^
..\..\ccNOos\computeModule\../executionSystem/execution_system.h:74:1: error: unknown type name 'uint32_t'
 uint32_t getuSecTicks();
 ^
..\..\ccNOos\computeModule\../executionSystem/execution_system.h:75:1: error: unknown type name 'uint32_t'
 uint32_t getHourTicks();
 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 11/01/2021 18:01:44 ---------------
